@@ -1,10 +1,14 @@
 package Service;
 
+import com.google.gson.JsonElement;
+import com.google.gson.JsonObject;
+import com.google.gson.JsonParser;
+
 import java.io.IOException;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
+import java.net.URL;
 
 public class ApiService {
     private String apiKey;
@@ -13,18 +17,25 @@ public class ApiService {
         this.apiKey = apiKey;
     }
 
-    public String getResponse(String coinCode) throws IOException, InterruptedException {
+    public double getConversion(String coinToConvertCode, String currentConversionCode) throws IOException, InterruptedException {
 
-        String url = "https://v6.exchangerate-api.com/v6/" + this.apiKey + "/latest/" + coinCode;
-        HttpClient client = HttpClient.newHttpClient();
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(url))
-                .build();
+        String url_str = "https://v6.exchangerate-api.com/v6/" + this.apiKey + "/latest/" + coinToConvertCode;
+        URL url = new URL(url_str);
+        HttpURLConnection request = (HttpURLConnection) url.openConnection();
+        request.connect();
 
-        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-        return response.body();
+        JsonParser jp = new JsonParser();
+        JsonElement root = jp.parse(new InputStreamReader((InputStream) request.getContent()));
+        JsonObject jsonObject = root.getAsJsonObject();
+
+        String reqResult = jsonObject.get("conversion_rates").getAsJsonObject().get(currentConversionCode).getAsString();
+
+        return Double.parseDouble(reqResult);
     }
 
-
+    public String getResponse(String coinToConvertCode, String currentConversionCode, double value) throws IOException, InterruptedException {
+        double finalValue = getConversion(coinToConvertCode, currentConversionCode) * value;
+        return String.format("The value of %f [%s] corresponds to ==> %f [%s]", value, coinToConvertCode, finalValue, currentConversionCode);
+    }
 
 }
